Fix h1 spacing on homepage

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -689,6 +689,10 @@ p code {
 
     font-size: 2.25em;
     margin-top: 5%;
+
+    h1 {
+        line-height: 1.15em;
+    }
 }
 
 /* ==========================================================================
